--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "skeleton-frontend",
+  "name": "noact-anguno-framework",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
